@@ -79,6 +79,7 @@ General options:
 
 TeX tuning:
   -@                         use @input instead of \input for preloaded Texinfo
+      --dvi                  output a DVI file [default]
   -e, -E, --expand           force macro expansion using makeinfo
   -I DIR                     search DIR for Texinfo files
   -l, --language=LANG        specify the LANG of FILE (LaTeX or Texinfo)
@@ -499,7 +500,7 @@ aux_file_p ()
 # ------------------
 # Return with success with FILE is an aux file containing citation
 # requests.
-aux_file_p ()
+bibaux_file_p ()
 {
   test -s "$1" || return 1
   if (grep '^\\bibstyle[{]' "$1"   \
@@ -775,21 +776,11 @@ run_bibtex ()
           || grep 'No file .*\.bbl\.' "$in_noext.log") \
         >&6 2>&1; \
   then
-    generated_files_get "$in_noext" |
-    while read f
+    for f in $(generated_files_get "$in_noext" bibaux_file_p)
     do
-      if test -s "$f" && \
-         (grep '^\\bibstyle[{]' "$f"   \
-          && grep '^\\bibdata[{]' "$f" \
-	  ## The following line is suspicious: fails when there
-          ## are citations in sub aux files.  We need to be
-          ## smarter in this case.
-          ## && grep '^\\citation[{]' "$f"
-	  ) >&6 2>&1; then
-        verbose "Running $bibtex $f ..."
-        $bibtex "$f" >&5 ||
-          fatal 1 "$bibtex exited with bad status, quitting."
-      fi
+      verbose "Running $bibtex $f ..."
+      $bibtex "$f" >&5 ||
+        fatal 1 "$bibtex exited with bad status, quitting."
     done
   fi
 }
@@ -1235,6 +1226,7 @@ while test x"$1" != x"$arg_sep"; do
          --build-dir)  shift; build_dir=$1; build_mode=tidy;;
     -c | --clean) build_mode=clean;;
     -D | --debug) debug=true;;
+         --dvi)   out_lang=dvi;;
     -e | -E | --expand) expand=t;;
     -h | --help) echo "$usage"; exit 0;;
          --html) out_lang=html;;
